@@ -616,6 +616,11 @@ static int callback_http(
 				}else{
 					mux__remove_out(mosq);
 				}
+			}else{
+				if(reason == LWS_CALLBACK_ADD_POLL_FD && (pollargs->events & POLLIN)){
+					/* Assume this is a new listener */
+					listeners__add_websockets(lws_get_context(wsi), pollargs->fd);
+				}
 			}
 			break;
 
@@ -641,7 +646,7 @@ static void log_wrap(int level, const char *line)
 	log__printf(NULL, MOSQ_LOG_WEBSOCKETS, "%s", l);
 }
 
-struct lws_context *mosq_websockets_init(struct mosquitto__listener *listener, const struct mosquitto__config *conf)
+void mosq_websockets_init(struct mosquitto__listener *listener, const struct mosquitto__config *conf)
 {
 	struct lws_context_creation_info info;
 	struct lws_protocols *p;
@@ -655,7 +660,7 @@ struct lws_context *mosq_websockets_init(struct mosquitto__listener *listener, c
 	p = mosquitto__calloc(protocol_count+1, sizeof(struct lws_protocols));
 	if(!p){
 		log__printf(NULL, MOSQ_LOG_ERR, "Out of memory.");
-		return NULL;
+		return;
 	}
 	for(i=0; protocols[i].name; i++){
 		p[i].name = protocols[i].name;
@@ -694,7 +699,7 @@ struct lws_context *mosq_websockets_init(struct mosquitto__listener *listener, c
 	if(!user){
 		mosquitto__free(p);
 		log__printf(NULL, MOSQ_LOG_ERR, "Out of memory.");
-		return NULL;
+		return;
 	}
 
 	if(listener->http_dir){
@@ -707,9 +712,10 @@ struct lws_context *mosq_websockets_init(struct mosquitto__listener *listener, c
 			mosquitto__free(user);
 			mosquitto__free(p);
 			log__printf(NULL, MOSQ_LOG_ERR, "Error: Unable to open http dir \"%s\".", listener->http_dir);
-			return NULL;
+			return;
 		}
 	}
+	user->listener = listener;
 
 	info.user = user;
 	info.pt_serv_buf_size = WS_SERV_BUF_SIZE;
@@ -718,7 +724,9 @@ struct lws_context *mosq_websockets_init(struct mosquitto__listener *listener, c
 	lws_set_log_level(conf->websockets_log_level, log_wrap);
 
 	log__printf(NULL, MOSQ_LOG_INFO, "Opening websockets listen socket on port %d.", listener->port);
-	return lws_create_context(&info);
+	listener->ws_in_init = true;
+	listener->ws_context = lws_create_context(&info);
+	listener->ws_in_init = false;
 }
 
 
